feat: added email verification
